--- a/index.html
+++ b/index.html
@@ -1,11 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hockey</title>
-</head>
-<body>
-    
-</body>
+
+    <!-- tailwind and DaisyUI cdn -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/4617b9b4af.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Manrope google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- tailwind custom color -->
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            colors: {
+              "bg-primary": "#FF4240",
+            },
+          },
+        },
+      };
+    </script>
+    <style>
+      .font-manrope {
+        font-family: "Manrope", sans-serif;
+      }
+    </style>
+  </head>
+
+  <body class="font-manrope">
+    <header class="container mx-auto">
+      <!-- navbar section -->
+      <nav class="my-2 lg:my-6">
+        <div class="navbar bg-base-100">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+              >
+                <li><a>Home</a></li>
+                <li><a>About</a></li>
+                <li><a>Pages</a></li>
+                <li><a>Blog</a></li>
+                <li><a>Contact</a></li>
+              </ul>
+            </div>
+            <a
+              class="btn btn-ghost text-xl px-0 font-bold lg:text-4xl lg:font-extrabold">Hockey<span class="text-bg-primary w-0">’</span>s</a
+            >
+          </div>
+          <div class="navbar-center">
+            <ul class="menu menu-horizontal px-1 text-lg hidden lg:flex">
+              <li class="text-bg-primary"><a>Home</a></li>
+              <li><a>About</a></li>
+              <li><a>Pages</a></li>
+              <li><a>Blog</a></li>
+              <li><a>Contact</a></li>
+            </ul>
+          </div>
+          <div class="navbar-end gap-6">
+            <i class="invisible lg:visible fa-solid fa-magnifying-glass"></i>
+            <a
+              class="btn lg:h-16 lg:w-40 bg-bg-primary text-white text-xl rounded-lg"
+              >Get Ticket</a
+            >
+          </div>
+        </div>
+      </nav>
+      <!-- banner section -->
+      <div class="container lg:relative mx-auto mt-10">
+        <div class="carousel mx-5 lg:w-full lg:h-[60vh] rounded-2xl">
+          <!-- slide 1 -->
+          <div id="slide1" class="carousel-item relative w-full ">
+            <img src="/images/banner-1.png" class="w-full" />
+            <div
+              class="absolute lg:space-x-2 transform -translate-y-1/2 left-5 bottom-2"
+            >
+              <a href="#slide3" class="btn bg-black text-white btn-circle">❮</a>
+              <a href="#slide2" class="btn bg-black text-white btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- slide 2 -->
+          <div id="slide2" class="carousel-item relative w-full ">
+            <img src="/images/banner-2.jpg" class="w-full" />
+            <div
+              class="absolute space-x-2 transform -translate-y-1/2 left-5 bottom-2"
+            >
+              <a href="#slide1" class="btn bg-black text-white btn-circle">❮</a>
+              <a href="#slide3" class="btn bg-black text-white btn-circle">❯</a>
+            </div>
+          </div>
+          <!-- slide 3 -->
+          <div id="slide3" class="carousel-item relative w-full ">
+            <img src="/Images/banner-3.jpg" class="w-full" />
+            <div
+              class="absolute space-x-2 transform -translate-y-1/2 left-5 bottom-2"
+            >
+              <a href="#slide2" class="btn bg-black text-white btn-circle">❮</a>
+              <a href="#slide1" class="btn bg-black text-white btn-circle">❯</a>
+            </div>
+          </div>          
+        </div>
+        <div class="lg:absolute bottom-16 w-11/12 m-auto mt-4 p-5 lg:right-10 lg:w-2/5 lg:h-40 bg-[#131318] rounded-2xl lg:p-5 text-white space-y-3">
+          <h4 class="text-2xl" >Meet all the heroes from the field</h4>
+          <p class="text-sm">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin. </p>
+        </div>
+                    
+        </div>
+      </div>
+    </header>
+
+    <main class="container mx-auto">
+      <!-- club section -->
+      <section class="my-24">
+        <div class="text-center space-y-4 mb-7">
+          <h2 class="lg:text-3xl text-xl font-extrabold">Professional Hockeys Club</h2>
+          <p class="lg:w-1/2 lg:mx-auto font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+        </div>
+          <div class="lg:flex justify-between text-center space-y-5 gap-5">
+           <div class="space-y-4">
+            <div class="radial-progress text-red-600" style="--value:87;" role="progressbar"><span class="text-black text-xl font-extrabold">87%</span></div>
+            <h2 class="text-xl font-semibold">Prayer Facility</h2>
+            <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+           </div>
+           <div class="space-y-4">
+            <div class="radial-progress text-green-500" style="--value:95;" role="progressbar"><span class="text-black text-xl font-extrabold">95%</span></div>
+            <h2 class="text-xl font-semibold">Experienced Coach</h2>
+            <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+           </div>
+           <div class="space-y-4">
+            <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar"><span class="text-black text-xl font-extrabold">90%</span></div>
+            <h2 class="text-xl font-semibold">Senior Player</h2>
+            <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+           </div>
+           <div class="space-y-4">
+            <div class="radial-progress text-blue-600" style="--value:80;" role="progressbar"><span class="text-black text-xl font-extrabold">80%</span></div>
+            <h2 class="text-xl font-semibold">Training Ground</h2>
+            <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+           </div>
+          </div>
+      </section>
+    </main>
+    <footer>
+
+    </footer>
+  </body>
 </html>
