updated image path

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="carousel mx-5 lg:w-full lg:h-[60vh] rounded-2xl">
           <!-- slide 1 -->
           <div id="slide1" class="carousel-item relative w-full ">
-            <img src="/images/banner-1.png" class="w-full" />
+            <img src="./images/banner-1.png" class="w-full" />
             <div
               class="absolute lg:space-x-2 transform -translate-y-1/2 left-5 bottom-2"
             >
@@ -117,7 +117,7 @@
           </div>
           <!-- slide 2 -->
           <div id="slide2" class="carousel-item relative w-full ">
-            <img src="/images/banner-2.jpg" class="w-full" />
+            <img src="./images/banner-2.jpg" class="w-full" />
             <div
               class="absolute space-x-2 transform -translate-y-1/2 left-5 bottom-2"
             >
@@ -127,7 +127,7 @@
           </div>
           <!-- slide 3 -->
           <div id="slide3" class="carousel-item relative w-full ">
-            <img src="/Images/banner-3.jpg" class="w-full" />
+            <img src="./Images/banner-3.jpg" class="w-full" />
             <div
               class="absolute space-x-2 transform -translate-y-1/2 left-5 bottom-2"
             >
