updated Image path

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="carousel mx-5 lg:w-full lg:h-[60vh] rounded-2xl">
           <!-- slide 1 -->
           <div id="slide1" class="carousel-item relative w-full ">
-            <img src="./images/banner-1.png" class="w-full" />
+            <img src="./Images/banner-1.png" class="w-full" />
             <div
               class="absolute lg:space-x-2 transform -translate-y-1/2 left-5 bottom-2"
             >
@@ -117,7 +117,7 @@
           </div>
           <!-- slide 2 -->
           <div id="slide2" class="carousel-item relative w-full ">
-            <img src="./images/banner-2.jpg" class="w-full" />
+            <img src="./Images/banner-2.jpg" class="w-full" />
             <div
               class="absolute space-x-2 transform -translate-y-1/2 left-5 bottom-2"
             >
@@ -185,7 +185,7 @@
         </div>
 
         <div class="lg:flex mx-4 justify-between gap-6">
-          <div class="h-72 mb-4 bg-[linear-gradient(to_top,rgba(00,00,00,0.2),rgba(00,00,00,0.5)),url('./images/programme-2.png')] bg-no-repeat rounded-2xl pl-8 bg-cover">
+          <div class="h-72 mb-4 bg-[linear-gradient(to_top,rgba(00,00,00,0.2),rgba(00,00,00,0.5)),url('./Images/programme-2.png')] bg-no-repeat rounded-2xl pl-8 bg-cover">
             <div class="text-white space-y-4 pt-6 lg:pt-12">
               <h2 class="text-3xl font-extrabold">Junior Program</h2>
               <p class="font-medium w-5/6 h">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit  enid sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.</p>
@@ -193,7 +193,7 @@
             </div>      
            </div>
     
-           <div class="h-72 bg-[linear-gradient(to_top,rgba(00,00,00,0.2),rgba(00,00,00,0.5)),url('./images/programme-3.png')] bg-no-repeat rounded-2xl pl-8 bg-cover">
+           <div class="h-72 bg-[linear-gradient(to_top,rgba(00,00,00,0.2),rgba(00,00,00,0.5)),url('./Images/programme-3.png')] bg-no-repeat rounded-2xl pl-8 bg-cover">
             <div class="text-white space-y-4 pt-6 lg:pt-12">
                      <h2 class="text-3xl font-extrabold">Teenager Program</h2>
               <p class="font-medium w-5/6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit  enid sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.</p>
@@ -202,7 +202,7 @@
            </div>
         </div>
 
-        <div class="h-72 lg:h-96 mx-4  bg-[linear-gradient(to_top,rgba(00,00,00,0.2),rgba(00,00,00,0.5)),url('./images/programme-4.png')] bg-no-repeat rounded-2xl pl-8 my-4 lg:my-1 bg-cover">
+        <div class="h-72 lg:h-96 mx-4  bg-[linear-gradient(to_top,rgba(00,00,00,0.2),rgba(00,00,00,0.5)),url('./Images/programme-4.png')] bg-no-repeat rounded-2xl pl-8 my-4 lg:my-1 bg-cover">
           <div class="text-white space-y-4 lg:pt-40 pt-6">
            <h2 class="text-3xl font-extrabold">Teenager Program</h2>
             <p class="font-medium lg:w-1/2 w-5/6">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit  enid sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.</p>
