--- a/index.html
+++ b/index.html
@@ -153,22 +153,23 @@
           <p class="lg:w-1/2 lg:mx-auto mx-10 font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
         </div>
           <div class="lg:flex justify-between text-center  pt-6 gap-5">
-           <div class="space-y-4">
-            <div class="radial-progress text-red-600" style="--value:87;" role="progressbar"><span class="text-black text-xl font-extrabold">87%</span></div>
+           <div class="space-y-4 mb-6">
+            <div class="radial-progress
+             text-red-500" style="--value:87;" role="progressbar"><span class="text-xl font-extrabold">87%</span></div>
             <h2 class="text-xl font-semibold">Prayer Facility</h2>
             <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
            </div>
-           <div class="space-y-4">
+           <div class="space-y-4 mb-6">
             <div class="radial-progress text-green-500" style="--value:95;" role="progressbar"><span class="text-black text-xl font-extrabold">95%</span></div>
             <h2 class="text-xl font-semibold">Experienced Coach</h2>
             <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
            </div>
-           <div class="space-y-4">
+           <div class="space-y-4 mb-6">
             <div class="radial-progress text-yellow-500" style="--value:90;" role="progressbar"><span class="text-black text-xl font-extrabold">90%</span></div>
             <h2 class="text-xl font-semibold">Senior Player</h2>
             <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
            </div>
-           <div class="space-y-4">
+           <div class="space-y-4 mb-6">
             <div class="radial-progress text-blue-600" style="--value:80;" role="progressbar"><span class="text-black text-xl font-extrabold">80%</span></div>
             <h2 class="text-xl font-semibold">Training Ground</h2>
             <p class="w-64 m-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
@@ -219,11 +220,11 @@
          <p class="lg:w-1/2 lg:mx-auto mx-10 font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
        </div>
 
-       <div class="lg:flex gap-6">
-  <div class="space-y-6">
+       <div class="lg:flex gap-6 ">
+  <div class="space-y-6 mb-7">
   <div class="lg:h-52 flex flex-col lg:flex-row lg:gap-5 rounded-2xl  border-2 border-gray-400">
-    <div class="py-4 pl-4">
-      <img class="lg:w-52 w-72 lg:h-44" src="Images/5.png" alt=""></div>
+    <div class="py-4 lg:pl-4 pl-8">
+      <img class="lg:w-60 w-80 lg:h-44" src="Images/5.png" alt=""></div>
     <div class="lg:pt-5 px-5 py-2 space-y-3">
       <div class="space-x-6">
         <i class="fa-solid fa-star text-[#F99808]"><span class="pl-2 text-gray-600"> 5 . 0</span> </i>
@@ -244,8 +245,8 @@
     </div>
   </div>
   <div class="lg:h-52 flex flex-col lg:flex-row lg:gap-5 rounded-2xl  border-2 border-gray-400">
-    <div class="py-4 pl-4">
-      <img class="lg:w-52 w-72 lg:h-44" src="Images/7.png" alt=""></div>
+    <div class="py-4 lg:pl-4 pl-8">
+      <img class="lg:w-60 w-80 lg:h-44" src="Images/7.png" alt=""></div>
     <div class="lg:pt-5 px-5 py-2 space-y-3">
       <div class="space-x-6">
         <i class="fa-solid fa-star text-[#F99808]"><span class="pl-2 text-gray-600"> 5 . 0</span> </i>
@@ -264,8 +265,8 @@
     </div>
   </div>
   <div class="lg:h-52  flex flex-col lg:flex-row lg:gap-5 rounded-2xl  border-2 border-gray-400">
-    <div class="py-4 pl-4">
-      <img class="lg:w-52 w-72 lg:h-44" src="Images/9.png" alt=""></div>
+    <div class="py-4 lg:pl-4 pl-8">
+      <img class="lg:w-60 w-80 lg:h-44" src="Images/9.png" alt=""></div>
     <div class="lg:pt-5 px-5 py-2 space-y-3">
       <div class="space-x-6">
         <i class="fa-solid fa-star text-[#F99808]"><span class="pl-2 text-gray-600"> 5 . 0</span> </i>
@@ -286,8 +287,8 @@
   </div>
     <div class="space-y-6">
       <div class="lg:h-52 flex flex-col lg:flex-row lg:gap-5 rounded-2xl  border-2 border-gray-400">
-        <div class="py-4 pl-4">
-          <img class="lg:w-52 w-72 lg:h-44" src="Images/6.png" alt=""></div>
+        <div class="py-4 lg:pl-4 pl-8">
+          <img class="lg:w-60 w-80 lg:h-44" src="Images/6.png" alt=""></div>
         <div class="lg:pt-5 px-5 py-2 space-y-3">
           <div class="space-x-6">
             <i class="fa-solid fa-star text-[#F99808]"><span class="pl-2 text-gray-600"> 5 . 0</span> </i>
@@ -306,8 +307,8 @@
         </div>
       </div>
       <div class=" lg:h-52 flex flex-col lg:flex-row lg:gap-5 rounded-2xl  border-2 border-gray-400">
-        <div class="py-4 pl-4">
-          <img class="lg:w-52 w-72 lg:h-44" src="Images/8.png" alt=""></div>
+        <div class="py-4 lg:pl-4 pl-8">
+          <img class="lg:w-60 w-80 lg:h-44" src="Images/8.png" alt=""></div>
         <div class="lg:pt-5 px-5 py-2 space-y-3">
           <div class="space-x-6">
             <i class="fa-solid fa-star text-[#F99808]"><span class="pl-2 text-gray-600"> 5 . 0</span> </i>
@@ -326,8 +327,8 @@
         </div>
       </div>
       <div class="lg:h-52 flex flex-col lg:flex-row lg:gap-5 rounded-2xl  border-2 border-gray-400">
-        <div class="py-4 pl-4">
-          <img class="lg:w-52 w-72 lg:h-44" src="Images/10.png" alt=""></div>
+        <div class="py-4 lg:pl-4 pl-8">
+          <img class="lg:w-60 w-80 lg:h-44" src="Images/10.png" alt=""></div>
         <div class="lg:pt-5 px-5 py-2 space-y-3">
           <div class="space-x-6">
             <i class="fa-solid fa-star text-[#F99808]"><span class="pl-2 text-gray-600"> 5 . 0</span> </i>
@@ -348,6 +349,76 @@
      </div>  
     </div>
       </section>
+
+    <!-- Form section -->
+  <section class="container lg:mt-44">
+    <div class="text-center my-20 lg:my-24
+        space-y-8">
+         <h2 class="lg:text-4xl text-xl font-extrabold">Get In Touch</h2>
+         <p class="lg:w-1/2 lg:mx-auto mx-10 font-medium">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in sit nullam proin.</p>
+       </div>
+
+    
+        <div class="flex flex-col lg:flex-row gap-8 mx-5">
+          <div class="w-96 space-y-6 mt-4">
+            <div class=" h-56 rounded-2xl bg-[#bced6d1a] space-y-6 py-9 px-8">
+              <img src="Images/Group 1171275317.png" alt="">
+              <p class="leading-8">Phone Number : 
+              <br>
+              <span class="text-lg font-extrabold">(+62) 123-321-543</span> 
+              </p>
+            </div>
+            <div class="h-56 rounded-2xl bg-[#fddd5f1a] space-y-6 py-9 px-8">
+              <img src="Images/Group 1171275318.png" alt="">
+              <p class="leading-8">Email : 
+              <br>
+              <span class="text-lg font-extrabold"> 
+                hockeys@support.com</span> 
+              </p>
+            </div>
+            <div class="h-56 rounded-2xl bg-[#629cf31a] space-y-6 py-9 px-8">
+              <img src="Images/Group 1171275321.png" alt="">
+              <p class="leading-8">Location : 
+              <br>
+              <span class="text-lg font-extrabold"> 
+                152/1 Mohakhali Wireless Gate</span> 
+              </p>
+            </div>
+         </div>
+
+      <div class="space-y-6">
+        <div class="space-y-5">
+           <div class="flex flex-col lg:flex-row gap-5">
+             <div class="space-y-3">
+               <h2 class="text-xl font-bold pl-3">Your Name</h2>
+               <input class="rounded-xl w-80 h-16 bg-[#13131805] pl-6 text-lg outline-none" type="text" placeholder="Enter your full name" name="" id="">
+             </div>
+             <div class="space-y-3">
+               <h2 class="text-xl font-bold pl-3">Your Email</h2>
+               <input class="rounded-xl w-80 h-16 bg-[#13131805] pl-6 text-lg outline-none" type="email" placeholder="Enter your email" name="" id="">
+             </div>
+           </div>
+           <div class="flex flex-col lg:flex-row gap-5">
+             <div class="space-y-4">
+               <h2 class="text-xl font-bold pl-3">Your Name</h2>
+               <input class="rounded-xl w-80 h-16 bg-[#13131805] pl-6 text-lg outline-none" type="text" placeholder="Enter your full name" name="" id="">
+             </div>
+             <div class="space-y-4">
+               <h2 class="text-xl font-bold pl-3">Your Email</h2>
+               <input class="rounded-xl w-80 h-16 bg-[#13131805] pl-6 text-lg outline-none" type="email" placeholder="Enter your email" name="" id="">
+             </div>
+           </div>
+        </div>
+
+        <div class="space-y-5">
+          <h2 class="text-xl font-bold pl-3">Message</h2>
+          <textarea class="w-full h-80 bg-[#13131808] rounded-xl outline-none text-lg pl-6 pt-6" name="" placeholder="Write your message" id="" cols="30" rows="10"></textarea>
+        </div>
+
+        <div class="w-full bg-bg-primary h-16 rounded-xl border-bg-primary">
+          <h2 class="text-center text-white text-xl font-bold py-4">Send Message</h2>
+        </div>       
+  </section>
     </main>
     <footer>
      
