--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
   </head>
 
-  <body class="font-manrope max-w-6xl mx-auto">
+  <body class="font-manrope max-w-6xl  mx-auto">
     <!-- header section -->
     <header class="container mx-auto">
       <!-- navbar section -->
@@ -81,16 +81,17 @@
               </ul>
             </div>
             <a
-              class="btn btn-ghost text-xl px-0 font-bold lg:text-4xl lg:font-extrabold">Hockey<span class="text-bg-primary w-0">’</span>s</a
+              class="text-xl px-0 font-bold lg:text-4xl lg:font-extrabold">Hockey<span class="text-bg-primary inline-block">’</span>s</a
             >
           </div>
           <div class="navbar-center">
             <ul class="menu menu-horizontal px-1 text-lg hidden lg:flex">
-              <li class="text-bg-primary"><a>Home</a></li>
-              <li><a>About</a></li>
-              <li><a>Pages</a></li>
-              <li><a>Blog</a></li>
-              <li><a>Contact</a></li>
+              <li class="text-bg-primary">
+                <a href="#banner">Home</a></li>
+              <li><a href="#programe">About</a></li>
+              <li><a href="#product">Pages</a></li>
+              <li><a href="#form">Blog</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
           <div class="navbar-end gap-6">
@@ -103,7 +104,7 @@
         </div>
       </nav>
       <!-- banner section -->
-      <div class="container lg:relative mx-auto mt-10">
+      <div id="banner" class="container lg:relative mx-auto mt-10">
         <div class="carousel mx-5 lg:w-full lg:h-[60vh] rounded-2xl">
           <!-- slide 1 -->
           <div id="slide1" class="carousel-item relative w-full ">
@@ -178,7 +179,7 @@
       </section>
 
       <!-- program section -->
-      <section class="container mx-auto">
+      <section id="programe" class="container mx-auto">
         <div class="text-center my-10 lg:my-16
          space-y-4">
           <h2 class="lg:text-4xl text-xl font-extrabold">Program Sections</h2>
@@ -213,7 +214,7 @@
       </section>
 
       <!-- products section -->
-      <section class="container mx-auto">
+      <section id="product" class="container mx-auto">
         <div class="text-center my-10 lg:my-20
         space-y-4">
          <h2 class="lg:text-4xl text-xl font-extrabold">Our New Products</h2>
@@ -351,7 +352,7 @@
       </section>
 
     <!-- Form section -->
-  <section class="container lg:mt-44">
+  <section id="form"  class="container lg:mt-44">
     <div class="text-center my-20 lg:my-24
         space-y-8">
          <h2 class="lg:text-4xl text-xl font-extrabold">Get In Touch</h2>
@@ -420,8 +421,64 @@
         </div>       
   </section>
     </main>
-    <footer>
-     
-    </footer>
+     <!-- footer section -->
+  
+<footer class="container lg:h-96 my-28 bg-[#131318] text-[#FFFFFF99] rounded-xl">
+
+  <div class="flex flex-col lg:items-start lg:justify-start justify-center items-center lg:flex-row ">
+    <div  class="lg:w-5/12 p-6 flex flex-col lg:block justify-center items-center lg:pl-14 pt-20 space-y-6">
+      <h2 class="text-3xl  font-extrabold text-white">Get In Touch</h2>
+            <p class="lg:w-4/5 lg:pl-0 pl-6
+             leading-7">Dit amet consectetur. Condimentum  adipiscing aliquam turpis placerat dolor . Purus urna in do the ever.</p>
+            <div class="space-y-2">
+              <div class="flex gap-5">
+                <i class="text-bg-primary text-xl fa-regular fa-envelope mb-1"></i>
+                <p>hockeys@support.com</p>
+              </div>
+              <div class="flex gap-5">
+                <i class="text-bg-primary text-xl fa-solid fa-phone mb-1"></i>
+                <p>(+62) 123-321-543</p>
+              </div>
+            </div>          
+     </div>
+
+<div class="flex gap-20">
+  <div class="my-20 h-3/4">
+    <h2 class="mb-6 text-lg font-bold text-white">Company</h2>
+    <div class="leading-9">
+      <a class="link link-hover">About us</a><br>
+      <a class="link link-hover">Leadership</a><br>
+      <a class="link link-hover">Careers</a><br>
+      <a class="link link-hover">News & Article</a><br>
+      <a class="link link-hover">Legal Notice</a>
+    </div>   
+  </div>
+
+  <div class="my-20 h-3/4">
+    <h2 class="mb-6 text-lg font-bold text-white">Support</h2>
+    <div class="leading-9">
+      <a class="link link-hover">Help Center</a><br>
+      <a class="link link-hover">FAQ</a><br>
+      <a class="link link-hover">Ticket Support</a><br>
+      <a class="link link-hover">Contact us</a><br>
+    </div>   
+  </div>
+</div>
+
+   <div class="lg:mx-20 mx-32">
+   <div class="my-20 h-3/4">
+    <h2 class="mb-6 text-lg font-bold text-white">Services</h2>
+    <div class="leading-9">
+      <a class="link link-hover">Academy</a><br>
+      <a class="link link-hover">Group Lesson</a><br>
+      <a class="link link-hover">Private Lesson</a><br>
+      <a class="link link-hover">Hockeys for kid</a><br>
+      <a class="link link-hover">Hockeys for Adult</a>
+    </div>   
+   </div>
+
+ </div>
+ </div>
+</footer>
   </body>
 </html>
